--- a/1-index.html
+++ b/1-index.html
@@ -63,23 +63,23 @@
         </div>
         <div class="list">
             <div class="list_components">
-                <img class="img_list" src="images/cap_1.png" alt="">
-                <p class="title_list">Lorem ipsum</p>
+                <img class="img_list" src="images/cap_1.png" alt="Lorem ipsum">
+                <h2 class="title_list">Lorem ipsum</h2>
                 <p class="text_list">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div class="list_components">
-                <img class="img_list" src="images/cap_2.png" alt="">
-                <p class="title_list">Lorem ipsum</p>
+                <img class="img_list" src="images/cap_2.png" alt="Lorem ipsum">
+                <h2 class="title_list">Lorem ipsum</h2>
                 <p class="text_list">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div class="list_components">
-                <img class="img_list" src="images/cap_3.png" alt="">
-                <p class="title_list">Lorem ipsum</p>
+                <img class="img_list" src="images/cap_3.png" alt="Lorem ipsum">
+                <h2 class="title_list">Lorem ipsum</h2>
                 <p class="text_list">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
             <div class="list_components">
-                <img class="img_list" src="images/cap_4.png" alt="">
-                <p class="title_list">Lorem ipsum</p>
+                <img class="img_list" src="images/cap_4.png" alt="Lorem ipsum">
+                <h2 class="title_list">Lorem ipsum</h2>
                 <p class="text_list">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
         </div>
