--- a/3-index.html
+++ b/3-index.html
@@ -173,7 +173,7 @@
     </section>
     <section class="contact">
         <h3 class="title_contact">Contact us</h3>
-        <form class="form_contact">
+        <form class="form_contact" style="width: 400px;">
             <input type="text" id="name" name="name" placeholder="Name" class="input">
             <input type="email" id="Email" name="Email" placeholder="Email" class="input">
             <input id="subject" name="subject" placeholder="Your message" class="input"></input>
